# prompt-regression-suite

./: .gitignore  Jenkinsfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
baselines/: mock.baseline.json
prompts/: accuracy.yaml  agent.yaml  consistency.yaml  data_validation.yaml  edge_cases.yaml  hallucination.yaml  reasoning.yaml  red_team.yaml  robustness.yaml  safety.yaml
reports/: claude-audit-2026-06-18.md  claude-free-tier-audit-2026-06-17.md  sample-report.html  sample-report.json
src/prompt_regression/: __init__.py  baseline.py  cli.py  gating.py  models.py  report.py  runner.py  validators.py
tests/: test_agent.py  test_gating_report.py  test_http_model.py  test_http_security.py  test_llm_judge.py  test_performance.py  test_red_team.py  test_repeat.py  test_runner_baseline.py  test_validators.py
